k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-assistant-service
  namespace: "2401121"
spec:
  selector:
    app: ai-assistant
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: ClusterIP
